global model & fund partly done & fix code
