# docs/swagger.yml
@@ -1,6 +1,15 @@
 consumes:
   - application/json
 definitions:
+  BaseRes:
+    type: object
+    properties:
+      code:
+        type: integer
+      codeMsg:
+        type: string
+      msg:
+        type: string
   Fund:
     type: object
     properties:
@@ -15,26 +24,80 @@ definitions:
     properties:
       code:
         type: integer
-      msg:
+      codeMsg:
         type: string
       data:
         $ref: "#/definitions/Fund"
+      msg:
+        type: string
   FundList:
     type: object
     properties:
       code:
         type: integer
-      msg:
+      codeMsg:
         type: string
       list:
         type: array
         items:
           $ref: "#/definitions/Fund"
+      msg:
+        type: string
 info:
   description: Life assistant api
   title: Docs
   version: 0.1.0
 paths:
+  /fund/createFund:
+    post:
+      tags:
+        - fund
+      summary: Create new fund
+      parameters:
+        - name: body
+          in: body
+          description: Fund object that needs to be created
+          required: true
+          schema:
+            $ref: "#/definitions/Fund"
+      responses:
+        200:
+          description: success
+          schema:
+            $ref: "#/definitions/BaseRes"
+  /fund/deleteFund:
+    delete:
+      tags:
+        - fund
+      summary: Delete fund by ID
+      parameters:
+        - name: id
+          in: query
+          description: id of fund to delete
+          required: true
+          type: integer
+      responses:
+        200:
+          description: success
+          schema:
+            $ref: "#/definitions/BaseRes"
+  /fund/updateFund:
+    patch:
+      tags:
+        - fund
+      summary: Update  fund
+      parameters:
+        - name: body
+          in: body
+          description: Fund object that needs to be created
+          required: true
+          schema:
+            $ref: "#/definitions/Fund"
+      responses:
+        200:
+          description: success
+          schema:
+            $ref: "#/definitions/BaseRes"
   /fund/getFund:
     get:
       tags:
@@ -70,23 +133,6 @@ paths:
           description: success
           schema:
             $ref: "#/definitions/FundList"
-  /fund/addFund:
-    post:
-      tags:
-        - fund
-      summary: Add new fund
-      parameters:
-        - name: body
-          in: body
-          description: Fund object that needs to be added
-          required: true
-          schema:
-            $ref: "#/definitions/Fund"
-      responses:
-        200:
-          description: success
-          schema:
-            $ref: "#/definitions/Fund"
 produces:
   - application/json
 schemes:
